fix transaction data
